--- a/top.html
+++ b/top.html
@@ -121,5 +121,15 @@
         </div>
       </nav>
     </header>
+    <main>
+
+    </main>
+    <footer>
+      <div class="footer-pc">
+        <div class="footer-pc-img">
+          <img width="267px" height="167px" src="img/footer/img-cta-screenshot.png" alt="模写修行のページが表示されているノートパソコン" decoding="async">
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
