--- a/top.html
+++ b/top.html
@@ -121,13 +121,36 @@
         </div>
       </nav>
     </header>
-    <main>
-
-    </main>
-    <footer>
-      <div class="footer-pc">
-        <div class="footer-pc-img">
-          <img width="267px" height="167px" src="img/footer/img-cta-screenshot.png" alt="模写修行のページが表示されているノートパソコン" decoding="async">
+    <main></main>
+    <footer class="footer">
+      <div class="footer-container l-section">
+        <div class="footer-container-pc">
+          <img
+            width="267"
+            height="167"
+            src="img/footer/img-cta-screenshot.png"
+            alt="模写修行のページが表示されているノートパソコン"
+            decoding="async"
+          />
+        </div>
+        <div class="footer-container-items">
+          <img
+            width="324"
+            height="38"
+            src="img/footer/logo-moshashugyo.png"
+            alt="模写修行 MOSHASHUGYO のロゴ"
+            decoding="async"
+          />
+            <p>駆け出しエンジニアのためのコーディング練習教材</p>
+          <div
+            class="c-button-white c-button--size-medium c-button--center l-section-body-s"
+        >
+          <span>詳しくはこちら</span>
+        </div>
+      </div>
+      <div class="footer-text">
+        <div class="footer-text-logo">
+          
         </div>
       </div>
     </footer>
