--- a/top.html
+++ b/top.html
@@ -138,7 +138,7 @@
             width="324"
             height="38"
             src="img/footer/logo-moshashugyo.png"
-            alt="模写修行 MOSHASHUGYO のロゴ"
+            alt="模写修行とMOSHASHUGYO のロゴ"
             decoding="async"
           />
             <p>駆け出しエンジニアのためのコーディング練習教材</p>
@@ -148,9 +148,47 @@
           <span>詳しくはこちら</span>
         </div>
       </div>
-      <div class="footer-text">
+      <div class="footer-info">
         <div class="footer-text-logo">
-          
+          <img width="323" height="42" src="img/footer/logo-footer-musha.png" alt="武者への道 presented by 模写修行" decoding="async">
+        </div>
+        <div class="footer-text">
+          <p>
+            <span>武者への道は駆け出しデザイナー・エンジニアを</span><span>応援するメディアです。</span>
+          </p>
+        </div>
+        <div class="footer-icon">
+          <a
+              href="https://twitter.com/"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <span class="u-visually-hidden">twitter</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+                <circle cx="200" cy="200" r="200" fill="#1d9bf0" />
+                <path
+                  d="M163.41,305.49c88.68,0,137.18-73.47,137.18-137.18q0-3.12-.14-6.23a98.24,98.24,0,0,0,24.05-25,96.64,96.64,0,0,1-27.69,7.59A48.37,48.37,0,0,0,318,118a96.63,96.63,0,0,1-30.61,11.7,48.24,48.24,0,0,0-82.16,44,136.86,136.86,0,0,1-99.38-50.37,48.25,48.25,0,0,0,14.92,64.36,47.77,47.77,0,0,1-21.84-6c0,.2,0,.4,0,.62a48.24,48.24,0,0,0,38.69,47.26,48.09,48.09,0,0,1-21.78.83,48.29,48.29,0,0,0,45,33.49A96.74,96.74,0,0,1,101,284.5a99.21,99.21,0,0,1-11.5-.66,136.53,136.53,0,0,0,73.91,21.65"
+                  fill="#fff"
+                />
+              </svg>
+            </a>
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <span class="u-visually-hidden">facebook</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024">
+                <path
+                  d="M1024,512C1024,229.23,794.77,0,512,0S0,229.23,0,512c0,255.55,187.23,467.37,432,505.78V660H302V512H432V399.2C432,270.88,508.44,200,625.39,200c56,0,114.61,10,114.61,10V336H675.44c-63.6,0-83.44,39.47-83.44,80v96H734L711.3,660H592v357.78C836.77,979.37,1024,767.55,1024,512Z"
+                  fill="#1877f2"
+                />
+                <path
+                  d="M711.3,660,734,512H592V416c0-40.49,19.84-80,83.44-80H740V210s-58.59-10-114.61-10C508.44,200,432,270.88,432,399.2V512H302V660H432v357.78a517.58,517.58,0,0,0,160,0V660Z"
+                  fill="#fff"
+                />
+              </svg>
+            </a>
         </div>
       </div>
     </footer>
