--- a/top.html
+++ b/top.html
@@ -141,24 +141,35 @@
             alt="模写修行とMOSHASHUGYO のロゴ"
             decoding="async"
           />
-            <p>駆け出しエンジニアのためのコーディング練習教材</p>
+          <p>駆け出しエンジニアのためのコーディング練習教材</p>
           <div
             class="c-button-white c-button--size-medium c-button--center l-section-body-s"
-        >
-          <span>詳しくはこちら</span>
+          >
+            <span>詳しくはこちら</span>
+          </div>
         </div>
       </div>
-      <div class="footer-info">
+      <div class="footer-main l-container-s l-section-body-m">
         <div class="footer-text-logo">
-          <img width="323" height="42" src="img/footer/logo-footer-musha.png" alt="武者への道 presented by 模写修行" decoding="async">
+          <img
+            width="323"
+            height="42"
+            src="img/footer/logo-footer-musha.png"
+            alt="武者への道 presented by 模写修行"
+            decoding="async"
+          />
         </div>
-        <div class="footer-text">
-          <p>
-            <span>武者への道は駆け出しデザイナー・エンジニアを</span><span>応援するメディアです。</span>
-          </p>
+        <div class="footer-text-wrapper">
+
+            <p class="footer-text"
+              >武者への道は駆け出しデザイナー・エンジニアを</p
+            >
+            <p class="footer-text">応援するメディアです。</p>
+
         </div>
-        <div class="footer-icon">
-          <a
+        <div class="footer-icons">
+          <div class="footer-icon">
+            <a
               href="https://twitter.com/"
               target="_blank"
               rel="noreferrer noopener"
@@ -172,6 +183,8 @@
                 />
               </svg>
             </a>
+          </div>
+          <div class="footer-icon">
             <a
               href="https://www.facebook.com/"
               target="_blank"
@@ -189,7 +202,19 @@
                 />
               </svg>
             </a>
+          </div>
         </div>
+        <div class="footer-list">
+          <ul class="footer-list-link">
+            <li><a href="">武者への道とは</a></li>
+            <li><a href="">会社概要</a></li>
+            <li><a href="">プライバシーポリシー</a></li>
+            <li><a href="">お問い合わせ</a></li>
+          </ul>
+        </div>
+        <div class="copyright">
+        <small class="copyright-text">© 2020 Road to MUSHA, inc.</small>
+      </div>
       </div>
     </footer>
   </body>
