--- a/top.html
+++ b/top.html
@@ -49,13 +49,6 @@
       <div class="header-container">
         <div class="header-items">
           <a href="top.html" rel="noreferrer noopener">
-            <!-- <img
-              src="img/header/logo-sp.png"
-              width="180"
-              height="28"
-              alt="..."
-              decoding="async"
-            /> -->
             <picture class="header-logo-img">
               <source
                 media="(max-width: 768px)"
@@ -121,7 +114,46 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main class="main">
+      <div class="top-kv">
+        <section class="top-kv-container c-thumbnail">
+          <div class="top-kv-thumbnail">
+            <img
+              src="img/thumbnail-sp.jpg"
+              width="324"
+              height="160"
+              alt="thumbnail"
+              decoding="async"
+            />
+          </div>
+          <div class="top-kv-title">
+            <div class="top-kv-button c-button c-button--size-small">
+              <span>HTML/CSS</span>
+            </div>
+            <div class="top-kv-text">
+              <h1>コーディング基礎から応用までの学習ロードマップ</h1>
+              <p>2020/12/15</p>
+            </div>
+          </div>
+        </section>
+        <div class="top-kv-pine">
+          <img
+          src="img/top/img-kv-treat.png"
+          width="180"
+          height="62"
+          alt="thumbnail"
+          decoding="async"
+        />
+        </div>
+        <div class="top-kv-musha">  <img
+          src="img/top/img-kv-character.png"
+          width="130"
+          height="184"
+          alt="thumbnail"
+          decoding="async"
+        /></div>
+      </div>
+    </main>
     <footer class="footer">
       <div class="footer-container l-section">
         <div class="footer-container-pc">
@@ -160,12 +192,10 @@
           />
         </div>
         <div class="footer-text-wrapper">
-
-            <p class="footer-text"
-              >武者への道は駆け出しデザイナー・エンジニアを</p
-            >
-            <p class="footer-text">応援するメディアです。</p>
-
+          <p class="footer-text">
+            武者への道は駆け出しデザイナー・エンジニアを
+          </p>
+          <p class="footer-text">応援するメディアです。</p>
         </div>
         <div class="footer-icons">
           <div class="footer-icon">
@@ -213,8 +243,8 @@
           </ul>
         </div>
         <div class="copyright">
-        <small class="copyright-text">© 2020 Road to MUSHA, inc.</small>
-      </div>
+          <small class="copyright-text">© 2020 Road to MUSHA, inc.</small>
+        </div>
       </div>
     </footer>
   </body>
