--- a/top.html
+++ b/top.html
@@ -119,39 +119,52 @@
         <section class="top-kv-container c-thumbnail">
           <div class="top-kv-thumbnail">
             <img
+              class="top-kv-img-sp"
               src="img/thumbnail-sp.jpg"
               width="324"
               height="160"
-              alt="thumbnail"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-kv-img"
+              src="img/thumbnail.jpg"
+              width="324"
+              height="160"
+              alt="thumbnail-large"
               decoding="async"
             />
           </div>
           <div class="top-kv-title">
-            <div class="top-kv-button c-button c-button--size-small">
-              <span>HTML/CSS</span>
-            </div>
-            <div class="top-kv-text">
-              <h1>コーディング基礎から応用までの学習ロードマップ</h1>
-              <p>2020/12/15</p>
+            <div class="top-kv-title-wrapper">
+              <div class="top-kv-button c-button c-button--size-small">
+                <span>HTML/CSS</span>
+              </div>
+              <div class="top-kv-text">
+                <h1>コーディング基礎から応用までの学習ロードマップ</h1>
+                <p>2020/12/15</p>
+              </div>
             </div>
           </div>
         </section>
         <div class="top-kv-pine">
           <img
-          src="img/top/img-kv-treat.png"
-          width="180"
-          height="62"
-          alt="thumbnail"
-          decoding="async"
-        />
+            src="img/top/img-kv-treat.png"
+            width="180"
+            height="62"
+            alt="thumbnail"
+            decoding="async"
+          />
         </div>
-        <div class="top-kv-musha">  <img
-          src="img/top/img-kv-character.png"
-          width="130"
-          height="184"
-          alt="thumbnail"
-          decoding="async"
-        /></div>
+        <div class="top-kv-musha">
+          <img
+            src="img/top/img-kv-character.png"
+            width="130"
+            height="184"
+            alt="thumbnail"
+            decoding="async"
+          />
+        </div>
       </div>
     </main>
     <footer class="footer">
