--- a/top.html
+++ b/top.html
@@ -147,23 +147,43 @@
             </div>
           </div>
         </section>
-        <div class="top-kv-pine">
-          <img
-            src="img/top/img-kv-treat.png"
-            width="180"
-            height="62"
-            alt="thumbnail"
-            decoding="async"
-          />
-        </div>
-        <div class="top-kv-musha">
-          <img
-            src="img/top/img-kv-character.png"
-            width="130"
-            height="184"
-            alt="thumbnail"
-            decoding="async"
-          />
+        <div class="top-kv-icon">
+          <div class="top-kv-pine">
+            <img
+              class="top-kv-pine-img-sp"
+              src="img/top/img-kv-treat.png"
+              width="180"
+              height="62"
+              alt="pine"
+              decoding="async"
+            />
+            <img
+              class="top-kv-pine-img"
+              src="img/top/img-kv-lg-treat.png"
+              width="250"
+              height="86"
+              alt="pine"
+              decoding="async"
+            />
+          </div>
+          <div class="top-kv-musha">
+            <img
+              class="top-kv-musha-img-sp"
+              src="img/top/img-kv-character.png"
+              width="130"
+              height="184"
+              alt="musha"
+              decoding="async"
+            />
+            <img
+              class="top-kv-musha-img"
+              src="img/top/img-kv-lg-character.png"
+              width="200"
+              height="284"
+              alt="musha"
+              decoding="async"
+            />
+          </div>
         </div>
       </div>
     </main>
