--- a/top.html
+++ b/top.html
@@ -117,7 +117,9 @@
     <main class="main">
       <div class="top-kv">
         <section class="top-kv-container c-thumbnail">
-          <div class="top-kv-thumbnail">
+          <div 
+          class="top-kv-thumbnail">
+          <a href="https://moshashugyo.com/" target="_blank" rel="noreferrer noopener">
             <img
               class="top-kv-img-sp"
               src="img/thumbnail-sp.jpg"
@@ -134,6 +136,7 @@
               alt="thumbnail-large"
               decoding="async"
             />
+          </a>
           </div>
           <div class="top-kv-title">
             <div class="top-kv-title-wrapper">
@@ -207,11 +210,11 @@
             decoding="async"
           />
           <p>駆け出しエンジニアのためのコーディング練習教材</p>
-          <div
-            class="c-button-white c-button--size-medium c-button--center l-section-body-s"
-          >
-            <span>詳しくはこちら</span>
-          </div>
+            <a href="https://moshashugyo.com/" target="_blank" rel="noreferrer noopener"
+              class="c-button-white c-button--size-medium c-button--center l-section-body-s"
+            >
+              <span>詳しくはこちら</span>
+            </a>
         </div>
       </div>
       <div class="footer-main l-container-s l-section-body-m">
