--- a/top.html
+++ b/top.html
@@ -45,6 +45,10 @@
     />
   </head>
   <body>
+    <!------------------------------------ */
+/* ヘッダー部分 */
+/* ------------------------------------>
+
     <header class="header">
       <div class="header-container">
         <div class="header-items">
@@ -115,28 +119,35 @@
       </nav>
     </header>
     <main class="main">
+      <!------------------------------------ */
+/* キービジュアル部分 */
+/* ------------------------------------>
+
       <div class="top-kv">
         <section class="top-kv-container c-thumbnail">
-          <div 
-          class="top-kv-thumbnail">
-          <a href="https://moshashugyo.com/" target="_blank" rel="noreferrer noopener">
-            <img
-              class="top-kv-img-sp"
-              src="img/thumbnail-sp.jpg"
-              width="324"
-              height="160"
-              alt="thumbnail-small"
-              decoding="async"
-            />
-            <img
-              class="top-kv-img"
-              src="img/thumbnail.jpg"
-              width="324"
-              height="160"
-              alt="thumbnail-large"
-              decoding="async"
-            />
-          </a>
+          <div class="top-kv-thumbnail">
+            <a
+              href="https://moshashugyo.com/"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <img
+                class="top-kv-img-sp"
+                src="img/thumbnail-sp.jpg"
+                width="324"
+                height="160"
+                alt="thumbnail-small"
+                decoding="async"
+              />
+              <img
+                class="top-kv-img"
+                src="img/thumbnail.jpg"
+                width="324"
+                height="160"
+                alt="thumbnail-large"
+                decoding="async"
+              />
+            </a>
           </div>
           <div class="top-kv-title">
             <div class="top-kv-title-wrapper">
@@ -189,7 +200,49 @@
           </div>
         </div>
       </div>
+
+      <!------------------------------------ */
+/* pop部分 */
+/* ------------------------------------>
+
+      <div class="top-pops l-container-s l-section">
+        <section class="top-pop">
+          <div class="top-pop-type">
+            <div class="top-pop-name c-button--size-small">JavaScript</div>
+            <div class="top-pop-day">2020/12/15</div>
+          </div>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="top-pop-thumbnail c-thumbnail"
+          >
+            <img
+              class="top-pop-img-sp"
+              src="img/thumbnail-pop.png"
+              width="324"
+              height="170"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-pop-img"
+              src="img/thumbnail-lg-pop.png"
+              width="344"
+              height="180"
+              alt="thumbnail-large"
+              decoding="async"
+            />
+          </a>
+          <p>コーディング基礎から応用までの学習ロードマップ</p>
+        </section>
+      </div>
     </main>
+
+ <!------------------------------------ */
+/* フッター部分 */
+/* ------------------------------------>
+
     <footer class="footer">
       <div class="footer-container l-section">
         <div class="footer-container-pc">
@@ -210,11 +263,14 @@
             decoding="async"
           />
           <p>駆け出しエンジニアのためのコーディング練習教材</p>
-            <a href="https://moshashugyo.com/" target="_blank" rel="noreferrer noopener"
-              class="c-button-white c-button--size-medium c-button--center l-section-body-s"
-            >
-              <span>詳しくはこちら</span>
-            </a>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="c-button-white c-button--size-medium c-button--center l-section-body-s"
+          >
+            <span>詳しくはこちら</span>
+          </a>
         </div>
       </div>
       <div class="footer-main l-container-s l-section-body-m">
