top_posts_1_revision

--- a/top.html
+++ b/top.html
@@ -202,23 +202,23 @@
       </div>
 
       <!------------------------------------ */
-/* pop部分 */
+/* posts部分 */
 /* ------------------------------------>
 
-      <div class="top-pops l-container-s l-section">
-        <section class="top-pop">
-          <div class="top-pop-type">
-            <div class="top-pop-name c-button--size-small">JavaScript</div>
-            <div class="top-pop-day">2020/12/15</div>
+      <div class="top-posts l-container-s l-section">
+        <section class="top-post">
+          <div class="top-post-type">
+            <div class="top-post-name c-button--size-small">JavaScript</div>
+            <div class="top-post-day">2020/12/15</div>
           </div>
           <a
             href="https://moshashugyo.com/"
             target="_blank"
             rel="noreferrer noopener"
-            class="top-pop-thumbnail c-thumbnail"
+            class="top-post-thumbnail c-thumbnail"
           >
             <img
-              class="top-pop-img-sp"
+              class="top-post-img-sp"
               src="img/thumbnail-pop.png"
               width="324"
               height="170"
@@ -226,7 +226,7 @@
               decoding="async"
             />
             <img
-              class="top-pop-img"
+              class="top-post-img"
               src="img/thumbnail-lg-pop.png"
               width="344"
               height="180"
