--- a/top.html
+++ b/top.html
@@ -234,7 +234,7 @@
               decoding="async"
             />
           </a>
-          <p>コーディング基礎から応用までの学習ロードマップ</p>
+          <h2>コーディング基礎から応用までの学習ロードマップ</h2>
         </section>
       </div>
     </main>
