--- a/top.html
+++ b/top.html
@@ -208,7 +208,7 @@
       <div class="top-posts l-container-s l-section">
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small">JavaScript</div>
+            <div class="top-post-name c-button--size-small c-button--JavaScript">JavaScript</div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -236,6 +236,254 @@
           </a>
           <h2>コーディング基礎から応用までの学習ロードマップ</h2>
         </section>
+        <section class="top-post">
+          <div class="top-post-type">
+            <div class="top-post-name c-button--size-small c-button--html">HTML/CSS</div>
+            <div class="top-post-day">2020/12/15</div>
+          </div>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="top-post-thumbnail c-thumbnail"
+          >
+            <img
+              class="top-post-img-sp"
+              src="img/thumbnail-pop.png"
+              width="324"
+              height="170"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-post-img"
+              src="img/thumbnail-lg-pop.png"
+              width="344"
+              height="180"
+              alt="thumbnail-large"
+              decoding="async"
+            />
+          </a>
+          <h2>コーディング基礎から応用までの学習ロードマップ</h2>
+        </section>
+        <section class="top-post">
+          <div class="top-post-type">
+            <div class="top-post-name c-button--size-small c-button--web">web制作</div>
+            <div class="top-post-day">2020/12/15</div>
+          </div>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="top-post-thumbnail c-thumbnail"
+          >
+            <img
+              class="top-post-img-sp"
+              src="img/thumbnail-pop.png"
+              width="324"
+              height="170"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-post-img"
+              src="img/thumbnail-lg-pop.png"
+              width="344"
+              height="180"
+              alt="thumbnail-large"
+              decoding="async"
+            />
+          </a>
+          <h2>コーディング基礎から応用までの学習ロードマップ</h2>
+        </section>
+        <section class="top-post">
+          <div class="top-post-type">
+            <div class="top-post-name c-button--size-small c-button--html">HTML/CSS</div>
+            <div class="top-post-day">2020/12/15</div>
+          </div>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="top-post-thumbnail c-thumbnail"
+          >
+            <img
+              class="top-post-img-sp"
+              src="img/thumbnail-pop.png"
+              width="324"
+              height="170"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-post-img"
+              src="img/thumbnail-lg-pop.png"
+              width="344"
+              height="180"
+              alt="thumbnail-large"
+              decoding="async"
+            />
+          </a>
+          <h2>コーディング基礎から応用までの学習ロードマップ</h2>
+        </section>
+        <section class="top-post">
+          <div class="top-post-type">
+            <div class="top-post-name c-button--size-small c-button--web">web制作</div>
+            <div class="top-post-day">2020/12/15</div>
+          </div>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="top-post-thumbnail c-thumbnail"
+          >
+            <img
+              class="top-post-img-sp"
+              src="img/thumbnail-pop.png"
+              width="324"
+              height="170"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-post-img"
+              src="img/thumbnail-lg-pop.png"
+              width="344"
+              height="180"
+              alt="thumbnail-large"
+              decoding="async"
+            />
+          </a>
+          <h2>コーディング基礎から応用までの学習ロードマップ</h2>
+        </section>
+        <section class="top-post">
+          <div class="top-post-type">
+            <div class="top-post-name c-button--size-small c-button--wordpress">WordPress</div>
+            <div class="top-post-day">2020/12/15</div>
+          </div>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="top-post-thumbnail c-thumbnail"
+          >
+            <img
+              class="top-post-img-sp"
+              src="img/thumbnail-pop.png"
+              width="324"
+              height="170"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-post-img"
+              src="img/thumbnail-lg-pop.png"
+              width="344"
+              height="180"
+              alt="thumbnail-large"
+              decoding="async"
+            />
+          </a>
+          <h2>コーディング基礎から応用までの学習ロードマップ</h2>
+        </section>
+        <section class="top-post">
+          <div class="top-post-type">
+            <div class="top-post-name c-button--size-small c-button--webdesign">webデザイン</div>
+            <div class="top-post-day">2020/12/15</div>
+          </div>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="top-post-thumbnail c-thumbnail"
+          >
+            <img
+              class="top-post-img-sp"
+              src="img/thumbnail-pop.png"
+              width="324"
+              height="170"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-post-img"
+              src="img/thumbnail-lg-pop.png"
+              width="344"
+              height="180"
+              alt="thumbnail-large"
+              decoding="async"
+            />
+          </a>
+          <h2>コーディング基礎から応用までの学習ロードマップ</h2>
+        </section>
+        <section class="top-post">
+          <div class="top-post-type">
+            <div class="top-post-name c-button--size-small c-button--JavaScript">JavaScript</div>
+            <div class="top-post-day">2020/12/15</div>
+          </div>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="top-post-thumbnail c-thumbnail"
+          >
+            <img
+              class="top-post-img-sp"
+              src="img/thumbnail-pop.png"
+              width="324"
+              height="170"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-post-img"
+              src="img/thumbnail-lg-pop.png"
+              width="344"
+              height="180"
+              alt="thumbnail-large"
+              decoding="async"
+            />
+          </a>
+          <h2>コーディング基礎から応用までの学習ロードマップ</h2>
+        </section>
+        <section class="top-post">
+          <div class="top-post-type">
+            <div class="top-post-name c-button--size-small c-button--html">HTML/CSS</div>
+            <div class="top-post-day">2020/12/15</div>
+          </div>
+          <a
+            href="https://moshashugyo.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="top-post-thumbnail c-thumbnail"
+          >
+            <img
+              class="top-post-img-sp"
+              src="img/thumbnail-pop.png"
+              width="324"
+              height="170"
+              alt="thumbnail-small"
+              decoding="async"
+            />
+            <img
+              class="top-post-img"
+              src="img/thumbnail-lg-pop.png"
+              width="344"
+              height="180"
+              alt="thumbnail-large"
+              decoding="async"
+            />
+          </a>
+          <h2>コーディング基礎から応用までの学習ロードマップ</h2>
+        </section>
+        <ul class="top-pagination">
+          <li class="c-pagination">＜</li>
+          <li class="c-pagination">１</li>
+          <li class="c-pagination-black">２</li>
+          <li class="c-pagination">…</li>
+          <li class="c-pagination">５</li>
+          <li class="c-pagination">＞</li>
+        </ul>
       </div>
     </main>
 
