--- a/top.html
+++ b/top.html
@@ -118,11 +118,12 @@
         </div>
       </nav>
     </header>
-    <main class="main">
-      <!------------------------------------ */
+
+<!------------------------------------ */
 /* キービジュアル部分 */
 /* ------------------------------------>
 
+    <main class="main">
       <div class="top-kv">
         <section class="top-kv-container c-thumbnail">
           <div class="top-kv-thumbnail">
@@ -208,7 +209,11 @@
       <div class="top-posts l-container-s l-section">
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small c-button--JavaScript">JavaScript</div>
+            <div
+              class="top-post-name c-button--size-small c-button--JavaScript"
+            >
+              JavaScript
+            </div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -238,7 +243,9 @@
         </section>
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small c-button--html">HTML/CSS</div>
+            <div class="top-post-name c-button--size-small c-button--html">
+              HTML/CSS
+            </div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -268,7 +275,9 @@
         </section>
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small c-button--web">web制作</div>
+            <div class="top-post-name c-button--size-small c-button--web">
+              web制作
+            </div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -298,7 +307,9 @@
         </section>
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small c-button--html">HTML/CSS</div>
+            <div class="top-post-name c-button--size-small c-button--html">
+              HTML/CSS
+            </div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -328,7 +339,9 @@
         </section>
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small c-button--web">web制作</div>
+            <div class="top-post-name c-button--size-small c-button--web">
+              web制作
+            </div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -358,7 +371,9 @@
         </section>
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small c-button--wordpress">WordPress</div>
+            <div class="top-post-name c-button--size-small c-button--wordpress">
+              WordPress
+            </div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -388,7 +403,9 @@
         </section>
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small c-button--webdesign">webデザイン</div>
+            <div class="top-post-name c-button--size-small c-button--webdesign">
+              webデザイン
+            </div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -418,7 +435,11 @@
         </section>
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small c-button--JavaScript">JavaScript</div>
+            <div
+              class="top-post-name c-button--size-small c-button--JavaScript"
+            >
+              JavaScript
+            </div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -448,7 +469,9 @@
         </section>
         <section class="top-post">
           <div class="top-post-type">
-            <div class="top-post-name c-button--size-small c-button--html">HTML/CSS</div>
+            <div class="top-post-name c-button--size-small c-button--html">
+              HTML/CSS
+            </div>
             <div class="top-post-day">2020/12/15</div>
           </div>
           <a
@@ -487,7 +510,7 @@
       </ul>
     </main>
 
- <!------------------------------------ */
+    <!------------------------------------ */
 /* フッター部分 */
 /* ------------------------------------>
 
